--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -11,6 +11,7 @@
         <h1>Contact</h1>
         <h2>Emily Lyons</h2>
         <p>308 Walnut Place<br>Syracuse, NY 13210</p>
+        <a href="mail to:elyons@syr.edu">Emily Lyons Email</a>
         <a href="https://www.linkedin.com/in/emilyilyons/" target="_blank">LinkedIn</a>
     </body>
 
