--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -15,7 +15,9 @@
             <a href="mailto:elyons@syr.edu">Emily Lyons Email</a>
         </p>
         <p>
-            <a href="https://www.linkedin.com/in/emilyilyons/" target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/emilyilyons/" target="_blank">My LinkedIn Page</a>
+            <a href="https://www.linkedin.com/in/emilyilyons/" target="_blank">
+            img src=LI-In-Bug.png</a>
         </p>
     </body>
 
