--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -17,7 +17,7 @@
         <p>
             <a href="https://www.linkedin.com/in/emilyilyons/" target="_blank">My LinkedIn Page</a>
             <a href="https://www.linkedin.com/in/emilyilyons/" target="_blank">
-            <img src="LI-In-Bug.png"></a>
+            <img src="/ist263/images/LI-In-Bug.png"/></a>
         </p>
     </body>
 
