--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -15,9 +15,9 @@
             <a href="mailto:elyons@syr.edu">Emily Lyons Email</a>
         </p>
         <p>
-            <a href="https://www.linkedin.com/in/emilyilyons/" target="_blank">My LinkedIn Page</a>
-            <a href="https://www.linkedin.com/in/emilyilyons/" target="_blank">
-            <img src="/ist263/images/LI-In-Bug.png"/></a>
+            <a href="https://www.linkedin.com/in/emilylyons/" target="_blank">My LinkedIn Page</a>
+            <a href="https://www.linkedin.com/in/emilylyons/" target="_blank">
+            <img src="/help/images/LI-Logo.png"/></a>
         </p>
     </body>
 
