--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -17,7 +17,7 @@
         <p>
             <a href="https://www.linkedin.com/in/emilylyons/" target="_blank">My LinkedIn Page</a>
             <a href="https://www.linkedin.com/in/emilylyons/" target="_blank">
-            <img src="/help/images/LI-Logo.png"/></a>
+            <img src="/ist263/images/LI-Logo.png"/></a>
         </p>
     </body>
 
