--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -19,6 +19,7 @@
             <a href="https://www.linkedin.com/in/emilyilyons/" target="_blank">
             <img src="/ist263/images/LI-Logo.png"/></a>
         </p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.0245965923345!2d-76.13538678458333!3d43.04091397914685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a019dc32a1%3A0xe8c1623fc71a81a5!2s308%20Walnut%20Pl%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1599674457078!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </body>
 
 </html>
