--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -12,7 +12,7 @@
         <h2>Emily Lyons</h2>
         <p>308 Walnut Place<br>Syracuse, NY 13210</p>
         <p>
-            <a href="mailto:elyons@syr.edu">Emily Lyons Email</a>
+            <a href="mailto:elyons@syr.edu">elyons@syr.edu</a>
         </p>
         <p>
             <a href="https://www.linkedin.com/in/emilyilyons/" target="_blank">My LinkedIn Page</a>
