--- a/lab04/skills.html
+++ b/lab04/skills.html
@@ -44,7 +44,7 @@
             <td>Proficient</td>
           </tr>
           <tr>
-            <td>Marketing Tooks</td>
+            <td>Marketing Tools</td>
             <td>CisionPoint</td> 
             <td>Proficient</td>
           </tr>
