--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -20,6 +20,23 @@
             <img src="/ist263/images/LI-Logo.png" alt=""/></a>
         </p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.0245965923345!2d-76.13538678458333!3d43.04091397914685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a019dc32a1%3A0xe8c1623fc71a81a5!2s308%20Walnut%20Pl%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1599674457078!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    
+        <form action="mailto:elyons@syr.edu" method="POST">
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname" value="First Name"><br>
+            <label for="lname">Last name:</label><br>
+            <input type="text" id="lname" name="lname" value="Last Name"><br>
+            <input type="radio" id="male" name="gender" value="male">
+            <label for="male">Male</label><br>
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="female">Female</label><br>
+            <input type="radio" id="other" name="gender" value="other">
+            <label for="other">Other</label><br>
+            <label for="message">Message:</label><br>
+            <input type="text" id="message" name="message" value="Hello Emily..."><br>
+            <input type="submit" value="Submit"><br>      
+        </form>
+    
     </body>
 
 </html>
