--- a/lab05/contact.html
+++ b/lab05/contact.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Title here</title>
+        <title>Title Here</title>
     </head>
 
     <body>
