--- a/lab06/contact.html
+++ b/lab06/contact.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Title Here</title>
-        <link rel="style" href="/ist263/lab6/style.css">
+        <link rel="stylesheet" href="styles.css">
 
     </head>
 
