--- a/lab06/skills.html
+++ b/lab06/skills.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Skills</title>
-        <link rel="style" href="/ist263/lab6/style.css">
+        <link rel="stylesheet" href="styles.css">
         <style>
             table, th, td {border: 1px solid black;}
         </style>
