--- a/lab07/skills.html
+++ b/lab07/skills.html
@@ -12,6 +12,12 @@
     </head>
 
     <body>
+
+      <nav>
+        <a href="https://elyons-su.github.io/ist263/lab07/index.html" target="_blank">Home | </a>
+        <a href="https://elyons-su.github.io/ist263/lab07/skills.html" target="_blank">Skills | </a>
+        <a href="https://elyons-su.github.io/ist263/lab07/contact.html" target="_blank">Contact</a>
+    </nav>
         <table>
             <caption>Technical Skills</caption>
         <tr>
