--- a/lab07/contact.html
+++ b/lab07/contact.html
@@ -10,6 +10,12 @@
     </head>
 
     <body>
+
+        <nav>
+            <a href="https://elyons-su.github.io/ist263/lab07/index.html" target="_blank">Home | </a>
+            <a href="https://elyons-su.github.io/ist263/lab07/skills.html" target="_blank">Skills | </a>
+            <a href="https://elyons-su.github.io/ist263/lab07/contact.html" target="_blank">Contact</a>
+        </nav>
         <h1>Contact</h1>
         <h2>Emily Lyons</h2>
         <p>308 Walnut Place<br>Syracuse, NY 13210</p>
