--- a/lab07/index.html
+++ b/lab07/index.html
@@ -10,9 +10,9 @@
  
     <body>
         <nav>
-            <a href="https://elyons-su.github.io/ist263/lab07/index.html" target="_blank">Home | </a>
-            <a href="https://elyons-su.github.io/ist263/lab07/skills.html" target="_blank">Skills | </a>
-            <a href="https://elyons-su.github.io/ist263/lab07/contact.html" target="_blank">Contact</a>
+            <a href="https://elyons-su.github.io/help/lab07/index.html" target="_blank">Home</a> | 
+            <a href="https://elyons-su.github.io/help/lab07/skills.html" target="_blank">Skills</a> | 
+            <a href="https://elyons-su.github.io/help/lab07/contact.html" target="_blank">Contact</a>
         </nav>
  
         <h1>Emily Lyons' Biography</h1>
