--- a/lab07/contact.html
+++ b/lab07/contact.html
@@ -12,9 +12,9 @@
     <body>
 
         <nav>
-            <a href="https://elyons-su.github.io/help/lab07/index.html" target="_blank">Home</a> | 
-            <a href="https://elyons-su.github.io/help/lab07/skills.html" target="_blank">Skills</a> | 
-            <a href="https://elyons-su.github.io/help/lab07/contact.html" target="_blank">Contact</a>
+            <a href="https://elyons-su.github.io/ist263/lab07/index.html" target="_blank">Home</a> | 
+            <a href="https://elyons-su.github.io/ist263/lab07/skills.html" target="_blank">Skills</a> | 
+            <a href="https://elyons-su.github.io/ist263/lab07/contact.html" target="_blank">Contact</a>
         </nav>
         <h1>Contact</h1>
         <h2>Emily Lyons</h2>
