--- a/lab07/index.html
+++ b/lab07/index.html
@@ -17,7 +17,7 @@
  
         <h1>Emily Lyons' Biography</h1>
 
-        <img src="/ist263/images/Emily.png" alt=""/></a>
+        <img src="/ist263/images/Emily.png" alt=""/>
  
         <p>I am a Junior majoring in Advertising with minors in Information Management and Technology and Sociology. I enjoy working collaboratively and expressing my creativity with others. This past summer I worked virtually as an Account Strategy Intern at Dotdash, a digital publishing company. I have danced almost my entire life, enjoy listening to music, spending time with my family, and going on hikes with my dog Chucky. I am an avid list maker, fashion trend watcher, and sushi enthusiast.</p>
         
