--- a/lab08/index.html
+++ b/lab08/index.html
@@ -40,6 +40,9 @@
             
     <hr>
     &copy; 2020
+    <div class="quote"></div>
+    “Life isn't about waiting for the storm to pass; it's about learning to dance in the rain” - Vivian Greene
+    <div class="clear"></div>
     </body>
- 
+
 </html>
