--- a/lab08/index.html
+++ b/lab08/index.html
@@ -17,7 +17,7 @@
  
         <h1>Emily Lyons' Biography</h1>
 
-        <img src="/ist263/images/Emily.png" alt=""/> 
+        <img src="/ist263/images/Emily.png" class="img1" alt=""/>
 
         <main>
 
@@ -39,9 +39,8 @@
         </main>
             
     <hr>
-    &copy; 2020
-    <div class="quote"></div>
-    “Life isn't about waiting for the storm to pass; it's about learning to dance in the rain” - Vivian Greene
+    <p class="copyright"> &copy; 2020 </p>
+    <p class="quote"> “Life isn't about waiting for the storm to pass; it's about learning to dance in the rain” - Vivian Greene - 2006</p>
     <div class="clear"></div>
     </body>
 
