--- a/lab08/Floats and Flexbox Practice.html
+++ b/lab08/Floats and Flexbox Practice.html
@@ -5,13 +5,16 @@
 		<title>Floats and Flexbox Practice</title>
 		<meta charset="utf-8">
 		<style>
-			.img1 {
-            float: left;
-             }
-             .clear {
-                 clear: both;
-             }
-		</style>
+            .img1 {
+                float: left;
+            }
+            .clear {
+                clear: both;
+            }
+            .part2 {
+                display: flex;
+            }
+        </style>
 	</head>
 	<body>
         <h1>Floats and Flexbox Practice</h1>
