--- a/lab09/index.html
+++ b/lab09/index.html
@@ -4,15 +4,16 @@
  
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Emily Lyons - Bio</title>
         <link rel="stylesheet" href="styles.css">
     </head>
  
     <body>
         <nav>
-            <a href="https://elyons-su.github.io/ist263/lab07/index.html" target="_blank">Home</a> | 
-            <a href="https://elyons-su.github.io/ist263/lab07/skills.html" target="_blank">Skills</a> | 
-            <a href="https://elyons-su.github.io/ist263/lab07/contact.html" target="_blank">Contact</a>
+            <a href="https://elyons-su.github.io/ist263/lab09/index.html" target="_blank">Home</a> | 
+            <a href="https://elyons-su.github.io/ist263/lab09/skills.html" target="_blank">Skills</a> | 
+            <a href="https://elyons-su.github.io/ist263/lab09/contact.html" target="_blank">Contact</a>
         </nav>
  
         <h1>Emily Lyons' Biography</h1>
