--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -20,7 +20,7 @@
         <h2>Emily Lyons</h2>
         <div class="contact">
         <section class="sec1">
-            <p class="adress">308 Walnut Place<br>Syracuse, NY 13210</p>
+            <p class="address">308 Walnut Place<br>Syracuse, NY 13210</p>
             <div class="links">
             <p>
                 <a href="mailto:elyons@syr.edu">elyons@syr.edu</a>
