--- a/lab09/contact.html
+++ b/lab09/contact.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Title Here</title>
+        <title>Contact</title>
         <link rel="stylesheet" href="styles.css">
 
     </head>
@@ -13,8 +13,8 @@
     <body>
 
         <nav>
-            <a href="https://elyons-su.github.io/ist263/lab09/index.html" target="_blank">Home</a> | 
-            <a href="https://elyons-su.github.io/ist263/lab09/skills.html" target="_blank">Skills</a> | 
+            <a href="https://elyons-su.github.io/ist263/lab09/index.html" target="_blank">Home</a> <span> |</span>
+            <a href="https://elyons-su.github.io/ist263/lab09/skills.html" target="_blank">Skills</a> <span> | </span> 
             <a href="https://elyons-su.github.io/ist263/lab09/contact.html" target="_blank">Contact</a>
         </nav>
         <h1>Contact</h1>
