--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -15,8 +15,8 @@
     <body>
 
       <nav>
-        <a href="https://elyons-su.github.io/ist263/lab09/index.html" target="_blank">Home</a> | 
-        <a href="https://elyons-su.github.io/ist263/lab09/skills.html" target="_blank">Skills</a> | 
+        <a href="https://elyons-su.github.io/ist263/lab09/index.html" target="_blank">Home</a> <span> |</span>
+        <a href="https://elyons-su.github.io/ist263/lab09/skills.html" target="_blank">Skills</a> <span> | </span> 
         <a href="https://elyons-su.github.io/ist263/lab09/contact.html" target="_blank">Contact</a>
     </nav>
         <table>
