--- a/lab10/skills.html
+++ b/lab10/skills.html
@@ -1,83 +1,93 @@
 <!DOCTYPE html>
-
+ 
 <html lang="en">
-
+ 
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+          #skip-to-content {
+              position: absolute; 
+              left: -999px;
+              background-color: #416286;
+              border: 1px solid gray;
+              }
+          #skip-to-content:focus {position: absolute; left: 10px;}
+      </style>
         <title>Skills</title>
         <link rel="stylesheet" href="styles.css">
         <style>
             table, th, td {border: 1px solid black;}
         </style>
     </head>
-
+ 
     <body>
-
+      <a id="skip-to-content" href="https://elyons-su.github.io/ist263/lab10/skills.html#content">Skip to Content</a>
       <nav>
         <a href="https://elyons-su.github.io/ist263/lab10/index.html" target="_blank">Home</a> <span> |</span>
         <a href="https://elyons-su.github.io/ist263/lab10/skills.html" target="_blank">Skills</a> <span> | </span> 
         <a href="https://elyons-su.github.io/ist263/lab10/contact.html" target="_blank">Contact</a>
     </nav>
-        <table>
+    <a id="content"></a>
+      <h1>Skills</h1>
+        <table class="table">
             <caption>Technical Skills</caption>
-        <tr>
-            <th>Category</th>
-            <th>Skill</th> 
-            <th>Competency Level</th>
-          </tr>
-          <tr class="evenrow">
-            <td>Tools & Tech</td>
-            <td>Microsoft Excel</td> 
-            <td>Proficient</td>
-          </tr>
-          <tr>
-            <td>Tools & Tech</td>
-            <td>Microsoft Word</td> 
-            <td>Proficient</td>
-          </tr>
-          <tr class="evenrow">
-            <td>Tools & Tech</td>
-            <td>Microsoft Powerpoint</td> 
-            <td>Proficient</td>
-          </tr>
-          <tr>
-            <td>Design</td>
-            <td>Adobe Photoshop</td> 
-            <td>Proficient</td>
-          </tr>
-          <tr class="evenrow">
-            <td>Design</td>
-            <td>Final Cut Pro</td> 
-            <td>Proficient</td>
-          </tr>
-          <tr>
-            <td>Marketing Tools</td>
-            <td>CisionPoint</td> 
-            <td>Proficient</td>
-          </tr>
-          <tr class="evenrow">
-            <td>Marketing Tools</td>
-            <td>Traackr</td> 
-            <td>Proficient</td>
-          </tr>
-          <tr>
-            <td>Research</td>
-            <td>MRI Simmons</td> 
-            <td>Proficient</td>
-          </tr>
-          <tr class="evenrow">
-            <td>Research</td>
-            <td>Comscore</td> 
-            <td>Proficent</td>
-          </tr>
-          <tr>
-            <td>Research</td>
-            <td>Pathmatics</td> 
-            <td>Proficient</td>
-          </tr>
+            <tr>
+                <th>Category</th>
+                <th>Skill</th>
+                <th>Competency Level</th>
+              </tr>
+              <tr class="evenrow">
+                <td>Tools & Tech</td>
+                <td>Microsoft Excel</td>
+                <td>Proficient</td>
+              </tr>
+              <tr>
+                <td>Tools & Tech</td>
+                <td>Microsoft Word</td>
+                <td>Proficient</td>
+              </tr>
+              <tr class="evenrow">
+                <td>Tools & Tech</td>
+                <td>Microsoft Powerpoint</td>
+                <td>Proficient</td>
+              </tr>
+              <tr>
+                <td>Design</td>
+                <td>Adobe Photoshop</td>
+                <td>Proficient</td>
+              </tr>
+              <tr class="evenrow">
+                <td>Design</td>
+                <td>Final Cut Pro</td>
+                <td>Proficient</td>
+              </tr>
+              <tr>
+                <td>Marketing Tools</td>
+                <td>Fission Point</td>
+                <td>Proficient</td>
+              </tr>
+              <tr class="evenrow">
+                <td>Marketing Tools</td>
+                <td>Tracker</td>
+                <td>Proficient</td>
+              </tr>
+              <tr>
+                <td>Research</td>
+                <td>MRI Simmons</td>
+                <td>Proficient</td>
+              </tr>
+              <tr class="evenrow">
+                <td>Research</td>
+                <td>Conscour</td>
+                <td>Proficient</td>
+              </tr>
+              <tr>
+                <td>Research</td>
+                <td>Pasmadock</td>
+                <td>Proficient</td>
+              </tr>
         </table>
     </body>
-
-
+ 
 </html>
