--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
-
+ 
 <html lang="en">
-
+ 
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+            #skip-to-content {
+                position: absolute; 
+                left: -999px;
+                background-color: #416286;
+                border: 1px solid gray;
+                }
+            #skip-to-content:focus {position: absolute; left: 10px;}
+            
+        </style>
         <title>Contact</title>
         <link rel="stylesheet" href="styles.css">
-
     </head>
-
+ 
     <body>
-
+        <a id="skip-to-content" href="https://elyons-su.github.io/ist263/lab10/contact.html#content">Skip to Content</a>
         <nav>
             <a href="https://elyons-su.github.io/ist263/lab10/index.html" target="_blank">Home</a> <span> |</span>
             <a href="https://elyons-su.github.io/ist263/lab10/skills.html" target="_blank">Skills</a> <span> | </span> 
@@ -19,25 +28,25 @@
         </nav>
         <h1>Contact</h1>
         <h2>Emily Lyons</h2>
+        <a id="content"></a>
         <div class="contact">
-        <section class="sec1">
+        <figure class="sec1">
             <p class="address">308 Walnut Place<br>Syracuse, NY 13210</p>
             <div class="links">
             <p>
                 <a href="mailto:elyons@syr.edu">elyons@syr.edu</a>
             </p>
             <p>
-                <a href="https://www.linkedin.com/in/emilyilyons/" target="_blank">My LinkedIn Page</a>
-                <a href="https://www.linkedin.com/in/emilyilyons/" target="_blank">
-                <img src="/ist263/images/logo-sized.png" alt="LinkedIn Logo"/></a>
+                <a href="https://www.linkedin.com/in/emilyilyons/" target="_blank"><img src="/ist263/images/logo-sized.png" alt="My LinkedIn Page"/></a>
             </p>
             </div>
-        </section>
+        </figure>
  
-        <section class="sec2">
-            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.0245965923345!2d-76.13538678458333!3d43.04091397914685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a019dc32a1%3A0xe8c1623fc71a81a5!2s308%20Walnut%20Pl%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1599674457078!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <figure class="sec2">
  
             <form action="mailto:elyons@syr.edu" method="POST" class="forms">
+                <fieldset>
+                <legend>Please enter the following information:</legend>
                 <label for="fname">First name:</label><br>
                 <input type="text" id="fname" name="fname" value="First Name"><br>
                 <label for="lname">Last name:</label><br>
@@ -51,8 +60,12 @@
                 <label for="message">Message:</label><br>
                 <input type="text" id="message" name="message" value="Hello Emily..."><br>
                 <input type="submit" value="Submit"><br>      
+                </fieldset>
             </form>
-        </section>
+ 
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.0245965923345!2d-76.13538678458333!3d43.04091397914685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a019dc32a1%3A0xe8c1623fc71a81a5!2s308%20Walnut%20Pl%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1599674457078!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+ 
+        </figure>
         </div>
     </body>
  
