--- a/lab10/index.html
+++ b/lab10/index.html
@@ -27,7 +27,7 @@
         </nav>
         
         <h1>Emily Lyons' Biography</h1>
-        <img src="/ist263/images/Emily.png" class="img1" alt="Emily Lyons"/>
+        <img src="/ist263/images/Emily.png" class="img1" alt="Emily Lyons Headshot"/>
         <a id="content"></a>
         <main>
  
