--- a/final project/campaign.html
+++ b/final project/campaign.html
@@ -17,7 +17,7 @@
             <a href="https://elyons-su.github.io/ist263/final project/roles.html" target="_blank">Advertising Roles & Responsibilities</a>
         </nav>
         
-        <h1>Advertising vs. Media</h1>
+        <h1>The Campaign Lifecycle</h1>
         <img src="/ist263/final project/media/campaign.png" alt="Campaign"/>
         <a id="content"></a>
         <main>
@@ -49,5 +49,11 @@
 
         </main>
     </body>
+</main>
+<hr>
+    <p>
+        Essence 2020 Summer Immersion Program Guide for Participants
+    </p>
+</body>
 
 </html>
