--- a/final project/campaign.html
+++ b/final project/campaign.html
@@ -24,7 +24,7 @@
             <p>
                 <strong>
                     The advertising campaign lifestyle creates a streamline plan for how we develop and execute media plans that successfully reach target markets in an innovative and precise way.
-                </strong>>
+                </strong>
             </p>
             <ol>
                 <li>
