--- a/final project/roles.html
+++ b/final project/roles.html
@@ -19,7 +19,7 @@
         
         <h1>Advertising Roles & Responsibilities</h1>
     
-        <img src="/help/project/media/culture.png" alt="Culture"/>
+        <img src="/ist263/final project/media/culture.png" alt="Culture"/>
         <a id="content"></a>
         <main>
 
