--- a/final project/home.html
+++ b/final project/home.html
@@ -9,17 +9,17 @@
     </head>
  
     <body>
-        <a id="skip-to-content" href="https://jarothenberg.github.io/help/project/home.html#content">Skip to Content</a>
+        <a id="skip-to-content" href="https://elyons-su.github.io/ist263/final project/home.html#content">Skip to Content</a>
         <nav>
-            <a href="https://jarothenberg.github.io/help/project/home.html" target="_blank">Home</a> <span> |</span>
-            <a href="https://jarothenberg.github.io/help/project/advertising.html" target="_blank">Advertising vs. Media</a> <span> | </span>
-            <a href="https://jarothenberg.github.io/help/project/campaign.html" target="_blank">The Campaign Lifecycle</a> <span> | </span> 
-            <a href="https://jarothenberg.github.io/help/project/roles.html" target="_blank">Advertising Roles & Responsibilities</a>
+            <a href="https://elyons-su.github.io/ist263/final project/home.html" target="_blank">Home</a> <span> |</span>
+            <a href="https://elyons-su.github.io/ist263/final project/advertising.html" target="_blank">Advertising vs. Media</a> <span> | </span>
+            <a href="https://elyons-su.github.io/ist263/final project/campaign.html" target="_blank">The Campaign Lifecycle</a> <span> | </span> 
+            <a href="https://elyons-su.github.io/ist263/final project/roles.html" target="_blank">Advertising Roles & Responsibilities</a>
         </nav>
         
         <h1>The World of Advertising</h1>
         <h2>Emily Lyons</h2>
-        <img src="/help/project/media/computer.png" alt="Computer"/>
+        <img src="/ist263/final project/media/computer.png" alt="Computer"/>
         <a id="content"></a>
         <h2>About Me:</h2>
         <p>
