--- a/finalproject/advertising.html
+++ b/finalproject/advertising.html
@@ -9,16 +9,16 @@
     </head>
 
     <body>
-        <a id="skip-to-content" href="https://elyons-su.github.io/ist263/final project/advertising.html#content">Skip to Content</a>
+        <a id="skip-to-content" href="https://elyons-su.github.io/ist263/finalproject/advertising.html#content">Skip to Content</a>
         <nav>
-            <a href="https://elyons-su.github.io/ist263/final project/home.html" target="_blank">Home</a> <span> |</span>
-            <a href="https://elyons-su.github.io/ist263/final project/advertising.html" target="_blank">Advertising vs. Media</a> <span> | </span>
-            <a href="https://elyons-su.github.io/ist263/final project/campaign.html" target="_blank">The Campaign Lifecycle</a> <span> | </span> 
-            <a href="https://elyons-su.github.io/ist263/final project/roles.html" target="_blank">Advertising Roles & Responsibilities</a>
+            <a href="https://elyons-su.github.io/ist263/finalproject/home.html" target="_blank">Home</a> <span> |</span>
+            <a href="https://elyons-su.github.io/ist263/finalproject/advertising.html" target="_blank">Advertising vs. Media</a> <span> | </span>
+            <a href="https://elyons-su.github.io/ist263/finalproject/campaign.html" target="_blank">The Campaign Lifecycle</a> <span> | </span> 
+            <a href="https://elyons-su.github.io/ist263/finalproject/roles.html" target="_blank">Advertising Roles & Responsibilities</a>
         </nav>
         
         <h1>Advertising vs. Media</h1>
-<img src="/ist263/final project/media/emoji.png" alt="Emoji"/>
+<img src="/ist263/finalproject/media/emoji.png" alt="Emoji"/>
         <a id="content"></a>
         <main>
 
