--- a/lab11/Practice.html
+++ b/lab11/Practice.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="utf-8">
     <title>Lab 11</title>
+    <script>
+        
+        function WinnerMessage () {
+            alert('You Won!');
+        }
+        function TryAgain () {
+            alert('Wrong Shell - Try Again');
+        }
+    
+    </script>
 </head>
 <body>
     <h1>Choose a Walnut</h1>
