--- a/lab11/Practice.html
+++ b/lab11/Practice.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Lab 11</title>
     <script>
-        
+
         function WinnerMessage () {
             alert('You Won!');
         }
@@ -16,8 +16,8 @@
 </head>
 <body>
     <h1>Choose a Walnut</h1>
-    <img src="https://laferger.github.io/ist263/images/walnut.jpg" alt="first walnut">
-    <img src="https://laferger.github.io/ist263/images/walnut.jpg" alt="second walnut">
-    <img src="https://laferger.github.io/ist263/images/walnut.jpg" alt="third walnut">
+    <img src="https://laferger.github.io/ist263/images/walnut.jpg" alt="first walnut" onclick="WinnerMessage();"> 
+    <img src="https://laferger.github.io/ist263/images/walnut.jpg" alt="second walnut" onclick="TryAgain();">
+    <img src="https://laferger.github.io/ist263/images/walnut.jpg" alt="third walnut" onclick="TryAgain();">
 </body>
 </html>
