--- a/finalproject/advertising.html
+++ b/finalproject/advertising.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
-
+ 
 <html lang="en">
-
+ 
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Advertising vs. Media</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
-
+ 
     <body>
-        <a id="skip-to-content" href="https://elyons-su.github.io/ist263/finalproject/advertising.html#content">Skip to Content</a>
+        <a id="skip-to-content" href="https://elyons-su.github.io/ist293/finalproject/advertising.html#content">Skip to Content</a>
         <nav>
-            <a href="https://elyons-su.github.io/ist263/finalproject/home.html" target="_blank">Home</a> <span> |</span>
-            <a href="https://elyons-su.github.io/ist263/finalproject/advertising.html" target="_blank">Advertising vs. Media</a> <span> | </span>
-            <a href="https://elyons-su.github.io/ist263/finalproject/campaign.html" target="_blank">The Campaign Lifecycle</a> <span> | </span> 
-            <a href="https://elyons-su.github.io/ist263/finalproject/roles.html" target="_blank">Advertising Roles & Responsibilities</a>
+            <a href="https://elyons-su.github.io/ist293/finalproject/home.html" target="_blank">Home</a> <span> |</span>
+            <a href="https://elyons-su.github.io/ist293/finalproject/advertising.html" target="_blank">Advertising vs. Media</a> <span> | </span>
+            <a href="https://elyons-su.github.io/ist293/finalproject/campaign.html" target="_blank">The Campaign Lifecycle</a> <span> | </span> 
+            <a href="https://elyons-su.github.io/ist293/finalproject/roles.html" target="_blank">Advertising Roles & Responsibilities</a>
         </nav>
-        
-        <h1>Advertising vs. Media</h1>
-<img src="/ist263/finalproject/media/emoji.png" alt="Emoji"/>
-        <a id="content"></a>
         <main>
-
+        <h1>Advertising vs. Media</h1>
+        <img src="/ist293/finalproject/media/emoji.png" alt="Emojis"/>
+        <a id="content"></a>
+        <section>
             <h2>Advertising</h2>
             <p>
                 Advertising is the messaging about a product or service delivered to the audience. Media is the vehicle delivering that message to the audience. In order for the message to have the greatest impact, you must choose media channels that best resonate with the message and the intended audience.
             </p>
+        </section>
+        <section>
             <h2>Media</h2>
             <p>
                 Media channels are vehicles that we use to influence audiences. When considering the marketing goals, budget, and intended audience from a client, we choose appropriate media channels. Some examples of a media channels are digital, tv, radio, out-of-home, and print. The combination of media channels is often referred to as the media plan.
             </p>
-
+        </section>
         </main>
-
     </body>
-
+ 
 </html>
