--- a/finalproject/home.html
+++ b/finalproject/home.html
@@ -6,36 +6,42 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Home</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
  
     <body>
-        <a id="skip-to-content" href="https://elyons-su.github.io/ist263/finalproject/home.html#content">Skip to Content</a>
+        <a id="skip-to-content" href="https://elyons-su.github.io/ist293/finalproject/home.html#content">Skip to Content</a>
         <nav>
-            <a href="https://elyons-su.github.io/ist263/finalproject/home.html" target="_blank">Home</a> <span> |</span>
-            <a href="https://elyons-su.github.io/ist263/finalproject/advertising.html" target="_blank">Advertising vs. Media</a> <span> | </span>
-            <a href="https://elyons-su.github.io/ist263/finalproject/campaign.html" target="_blank">The Campaign Lifecycle</a> <span> | </span> 
-            <a href="https://elyons-su.github.io/ist263/finalproject/roles.html" target="_blank">Advertising Roles & Responsibilities</a>
+            <a href="https://elyons-su.github.io/ist293/finalproject/home.html" target="_blank">Home</a> <span> |</span>
+            <a href="https://elyons-su.github.io/ist293/finalproject/advertising.html" target="_blank">Advertising vs. Media</a> <span> | </span>
+            <a href="https://elyons-su.github.io/ist293/finalproject/campaign.html" target="_blank">The Campaign Lifecycle</a> <span> | </span> 
+            <a href="https://elyons-su.github.io/ist293/finalproject/roles.html" target="_blank">Advertising Roles & Responsibilities</a>
         </nav>
-        
+        <main>
         <h1>The World of Advertising</h1>
         <h2>Emily Lyons</h2>
-        <img src="/ist263/finalproject/media/computer.png" alt="Computer"/>
+        <img src="/ist293/finalproject/media/computer.png" alt="Computer" class="img1"/>
         <a id="content"></a>
+        <section class="aboutMe">
         <h2>About Me:</h2>
         <p>
             Hi, I am Emily Lyons! I am a Syracuse University Newhouse student. I am passionate about media and new ways to communicate with audiences. I am an avid list-maker, sushi lover, and fashion trend watcher. I am always looking for new opportunities to build on my existing advertising experience.
         </p>
+        </section>
+        <div class="noFloat">
+        <section>
         <h2>How I Gain Inspiration in Advertising:</h2>
         <p>
             When creativity whispers “pffft!” and disappears, panic can set in with the irrational thought that inspiration might never return. You tell yourself it’s just a dry spell, but your heart isn’t in it: until the creative juices begin to flow again, until you experience that understated euphoria of bringing a new concept into being. Luckily for me, as soon as I feel my creativity has deserted me, I can dig myself out of my rut by….coming up with something special for my third-grade Hebrew class. These little ones always bring me to the heart of my innovativeness and resourcefulness. In keeping them interested in Hebrew language and culture, I have to rely on the same principle that give me ideas for advertising: of connectivity. To link them to their past and allow them to see the relevance of their future, I ask them, “What was your rose and your thorn for this past week?” As they discuss their highs and lows, I see the world through their eyes, retain a fresh perspective, and, most importantly, find what brings us together. Advertising is about putting things out into the world that people haven't seen before, things that feel worth watching, worth talking about, worth sharing, worthy of someone's time and attention. Like the creative impulse itself, it’s about connections.
         </p>    
+        </section>
+        <section>
         <h2>My Favorite Advertisement:</h2>
         <p>
             Everyone knows that as soon as Colin Kaepernick became the face of Nike, its sneakers sales soared. The slogan, as unassuming as Kaepernick has been about his decision to take a knee, is placed under his serious face with its untouched shadows, unapologetic afro, and piercing eyes. The slogan declares: “Believe in something/ Even if it means sacrificing everything.” There is an undeniable appeal to millennials, young enough to respond to the thrill of rebelliousness but old enough to know they are trying to make it in a tougher world than their parents. To further connect with this target group, Nike might consider partnering with Dr. Pepper, a soda brand that also has a dual appeal all its own. Dr. Pepper isn’t just for the mainstream crowd (a.k.a. Coke and Pepsi drinkers). It’s for those who value their own taste as much as they trust their own opinions.
         </p>   
-        <main>
- 
+        </section>
+        </div>
         </main>
     </body>
- 
 </html>
