--- a/finalproject/roles.html
+++ b/finalproject/roles.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
-
+ 
 <html lang="en">
-
+ 
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Advertising Roles & Responsibilities</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
-
+ 
     <body>
-        <a id="skip-to-content" href="https://elyons-su.github.io/ist263/finalproject/roles.html#content">Skip to Content</a>
+        <a id="skip-to-content" href="https://elyons-su.github.io/ist293/finalproject/roles.html#content">Skip to Content</a>
         <nav>
-            <a href="https://elyons-su.github.io/ist263/finalproject/home.html" target="_blank">Home</a> <span> |</span>
-            <a href="https://elyons-su.github.io/ist263/finalproject/advertising.html" target="_blank">Advertising vs. Media</a> <span> | </span>
-            <a href="https://elyons-su.github.io/ist263/finalproject/campaign.html" target="_blank">The Campaign Lifecycle</a> <span> | </span> 
-            <a href="https://elyons-su.github.io/ist263/finalproject/roles.html" target="_blank">Advertising Roles & Responsibilities</a>
+            <a href="https://elyons-su.github.io/ist293/finalproject/home.html" target="_blank">Home</a> <span> |</span>
+            <a href="https://elyons-su.github.io/ist293/finalproject/advertising.html" target="_blank">Advertising vs. Media</a> <span> | </span>
+            <a href="https://elyons-su.github.io/ist293/finalproject/campaign.html" target="_blank">The Campaign Lifecycle</a> <span> | </span> 
+            <a href="https://elyons-su.github.io/ist293/finalproject/roles.html" target="_blank">Advertising Roles & Responsibilities</a>
         </nav>
-        
-        <h1>Advertising Roles & Responsibilities</h1>
-    
-        <img src="/ist263/finalproject/media/culture.png" alt="Culture"/>
-        <a id="content"></a>
         <main>
-
+        <h1>Advertising Roles & Responsibilities</h1>
+        <img src="/ist293/finalproject/media/culture.png" alt="Culture"/>
+        <a id="content"></a>
             <ul>
                 <li>Strategy</li>
                 <li>Account Management</li>
@@ -31,8 +29,7 @@
                 <li>Art Direction</li>
                 <li>Marketing</li>
             </ul>
-
         </main>
     </body>
-
+ 
 </html>
