--- a/finalproject/campaign.html
+++ b/finalproject/campaign.html
@@ -5,12 +5,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Advertising vs. Media</title>
+        <title>The Campaign Lifecycle</title>
         <link rel="stylesheet" href="styles.css">
     </head>
  
     <body>
-        <a id="skip-to-content" href="https://elyons-su.github.io/ist263/finalproject/advertising.html#content">Skip to Content</a>
+        <a id="skip-to-content" href="https://elyons-su.github.io/ist263/finalproject/campaign.html#content">Skip to Content</a>
         <nav>
             <a href="https://elyons-su.github.io/ist263/finalproject/home.html" target="_blank">Home</a> <span> |</span>
             <a href="https://elyons-su.github.io/ist263/finalproject/advertising.html" target="_blank">Advertising vs. Media</a> <span> | </span>
@@ -18,22 +18,39 @@
             <a href="https://elyons-su.github.io/ist263/finalproject/roles.html" target="_blank">Advertising Roles & Responsibilities</a>
         </nav>
         <main>
-        <h1>Advertising vs. Media</h1>
-        <img src="/ist263/finalproject/media/emoji.png" alt="Emojis"/>
+        <h1>The Campaing Lifecycle</h1>
+        <img src="/ist263/finalproject/media/campaign.png" alt="Campaign"/>
         <a id="content"></a>
-        <section>
-            <h2>Advertising</h2>
             <p>
-                Advertising is the messaging about a product or service delivered to the audience. Media is the vehicle delivering that message to the audience. In order for the message to have the greatest impact, you must choose media channels that best resonate with the message and the intended audience.
+                <strong>
+                    The advertising campaign lifestyle creates a streamline plan for how we develop and execute media plans that successfully reach target markets in an innovative and precise way.
+                </strong>
             </p>
-        </section>
-        <section>
-            <h2>Media</h2>
-            <p>
-                Media channels are vehicles that we use to influence audiences. When considering the marketing goals, budget, and intended audience from a client, we choose appropriate media channels. Some examples of a media channels are digital, tv, radio, out-of-home, and print. The combination of media channels is often referred to as the media plan.
-            </p>
-        </section>
+            <ol>
+                <li>
+                    The campaign lifecycle beings with the brief which comes directly from the client. The client will share their goals that they want to achieve through the brief and how much money they plan to budget towards the campaign. 
+                </li>
+                <li>
+                    The next step of the campaign lifecycle is strategy. The strategy is when the brief turns into an approach for how the message is going to be conveyed and how to reach the target audience in the most effective way possible. 
+                </li>
+                <li>
+                    Next is planning which media channels to select based on what is expected to deliver on the planned goals. 
+                </li>
+                <li>
+                    Pre-launch is the time when contracts are signed and the amount of media ordered is specified to ensure that goals are met. 
+                </li>
+                <li>
+                    The next flight is in-flight monitoring. This is the time that we monitor all of the channels and make adjustments to ensure that the campaign is performing well. 
+                </li>
+                <li>
+                    Lastly, is post campaign where after a campaign ends we report on how successful the campaign performed and how the brief was delivered. 
+                </li>
+            </ol>
         </main>
+        <hr>
+            <p>
+                Essence 2020 Summer Immersion Program Guide for Participants
+            </p>
     </body>
  
 </html>
