--- a/finalproject/roles.html
+++ b/finalproject/roles.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Advertising Roles & Responsibilities</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="shortcut icon" type="image/x-icon" href="/ist263/finalproject/media/favicon.ico">
     </head>
  
     <body>
