--- a/finalproject/campaign.html
+++ b/finalproject/campaign.html
@@ -8,6 +8,8 @@
         <title>The Campaign Lifecycle</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="shortcut icon" type="image/x-icon" href="/ist263/finalproject/media/favicon.ico">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     </head>
  
     <body>
