--- a/xcredit/skills.html
+++ b/xcredit/skills.html
@@ -22,11 +22,12 @@
     </head>
  
     <body>
-      <a id="skip-to-content" href="https://elyons-su.github.io/ist263/lab10/skills.html#content">Skip to Content</a>
+      <a id="skip-to-content" href="https://elyons-su.github.io/ist263/xcredit/skills.html#content">Skip to Content</a>
       <nav>
-        <a href="https://elyons-su.github.io/ist263/lab10/index.html" target="_blank">Home</a> <span> |</span>
-        <a href="https://elyons-su.github.io/ist263/lab10/skills.html" target="_blank">Skills</a> <span> | </span> 
-        <a href="https://elyons-su.github.io/ist263/lab10/contact.html" target="_blank">Contact</a>
+        <a href="https://elyons-su.github.io/ist263/xcredit/index.html" target="_blank">Home</a> <span> |</span>
+        <a href="https://elyons-su.github.io/ist263/xcredit/skills.html" target="_blank">Skills</a> <span> | </span> 
+        <a href="https://elyons-su.github.io/ist263/xcredit/contact.html" target="_blank">Contact</a><span> | </span> 
+        <a href="https://elyons-su.github.io/ist263/xcredit/slideshow.html" target="_blank">Slideshow</a>
     </nav>
     <a id="content"></a>
       <h1>Skills</h1>
