--- a/xcredit/slideshow.html
+++ b/xcredit/slideshow.html
@@ -92,11 +92,11 @@
 <body onload="Clear(); Slide1();">
 <div id="slideshow-container">
     <div id="bigimages">
-        <img src="/ist263/images/dancing1.JPG" alt="Me dancing 1" id="dancing1">
-        <img src="/ist263/images/dancing2.JPG" alt="Me dancing 2" id="dancing2">
-        <img src="/ist263/images/dancing3.JPG" alt="Me dancing 3" id="dancing3">
-        <img src="/ist263/images/dancing4.JPG" alt="Me dancing 4" id="dancing4">
-        <img src="/ist263/images/dancing5.JPG" alt="Me dancing 5" id="dancing5">
+        <img src="/ist263/images/dancing1.jpg" alt="Me dancing 1" id="dancing1">
+        <img src="/ist263/images/dancing2.jpg" alt="Me dancing 2" id="dancing2">
+        <img src="/ist263/images/dancing3.jpg" alt="Me dancing 3" id="dancing3">
+        <img src="/ist263/images/dancing4.jpg" alt="Me dancing 4" id="dancing4">
+        <img src="/ist263/images/dancing5.jpg" alt="Me dancing 5" id="dancing5">
     </div>
     <div id="info">
         <h1>My Dance Journey</h1>
@@ -121,11 +121,11 @@
             <p>I will always have a passion for dance. Although it is not a career I wish to pursue, it is a passion I will continue to participate in.</p>
         </div>
     <div id="thumbnails">
-        <img src="/ist263/images/dancing1.JPG" alt="Me dancing 1" id="dancing1thumb" onclick="Clear(); Slide1();">
-        <img src="/ist263/images/dancing2.JPG" alt="Me dancing 2" id="dancing2thumb" onclick="Clear(); Slide2();">
-        <img src="/ist263/images/dancing3.JPG" alt="Me dancing 3" id="dancing3thumb" onclick="Clear(); Slide3();">
-        <img src="/ist263/images/dancing4.JPG" alt="Me dancing 4" id="dancing4thumb" onclick="Clear(); Slide4();">
-        <img src="/ist263/images/dancing5.JPG" alt="Me dancing 5" id="dancing5thumb" onclick="Clear(); Slide5();">
+        <img src="/ist263/images/dancing1.jpg" alt="Me dancing 1" id="dancing1thumb" onclick="Clear(); Slide1();">
+        <img src="/ist263/images/dancing2.jpg" alt="Me dancing 2" id="dancing2thumb" onclick="Clear(); Slide2();">
+        <img src="/ist263/images/dancing3.jpg" alt="Me dancing 3" id="dancing3thumb" onclick="Clear(); Slide3();">
+        <img src="/ist263/images/dancing4.jpg" alt="Me dancing 4" id="dancing4thumb" onclick="Clear(); Slide4();">
+        <img src="/ist263/images/dancing5.jpg" alt="Me dancing 5" id="dancing5thumb" onclick="Clear(); Slide5();">
     </div>
 </body>
 </html>
