--- a/finalproject/campaign.html
+++ b/finalproject/campaign.html
@@ -15,10 +15,10 @@
     <body>
         <a id="skip-to-content" href="https://elyons-su.github.io/ist263/finalproject/campaign.html#content">Skip to Content</a>
         <nav>
-            <a href="https://elyons-su.github.io/ist263/finalproject/home.html" target="_blank">Home</a> <span> |</span>
-            <a href="https://elyons-su.github.io/ist263/finalproject/advertising.html" target="_blank">Advertising vs. Media</a> <span> | </span>
-            <a href="https://elyons-su.github.io/ist263/finalproject/campaign.html" target="_blank">The Campaign Lifecycle</a> <span> | </span> 
-            <a href="https://elyons-su.github.io/ist263/finalproject/roles.html" target="_blank">Advertising Roles & Responsibilities</a>
+            <a href="https://elyons-su.github.io/ist263/finalproject/home.html" target="_self">Home</a> <span> |</span>
+            <a href="https://elyons-su.github.io/ist263/finalproject/advertising.html" target="_self">Advertising vs. Media</a> <span> | </span>
+            <a href="https://elyons-su.github.io/ist263/finalproject/campaign.html" target="_self">The Campaign Lifecycle</a> <span> | </span> 
+            <a href="https://elyons-su.github.io/ist263/finalproject/roles.html" target="_self">Advertising Roles & Responsibilities</a>
         </nav>
         <main>
         <h1>The Campaing Lifecycle</h1>
