--- a/finalproject/advertising.html
+++ b/finalproject/advertising.html
@@ -22,7 +22,7 @@
         </nav>
         <main>
         <h1>Advertising vs. Media</h1>
-        <img src="/ist263/finalproject/media/emoji.png" alt="Emojis"/>
+        <img src="/ist263/finalproject/media/emoji.png" alt="Emojis" width="500"/>
         <a id="content"></a>
         <section>
             <h2>Advertising</h2>
