--- a/finalproject/home.html
+++ b/finalproject/home.html
@@ -23,7 +23,7 @@
         <main>
         <h1>The World of Advertising</h1>
         <h2>Emily Lyons</h2>
-        <img src="/ist263/finalproject/media/computer.png" alt="Computer" class="img1"/>
+        <img src="/ist263/finalproject/media/computer.png" alt="Computer" class="img1" width="500"/>
         <a id="content"></a>
         <section class="aboutMe">
         <h2>About Me:</h2>
