--- a/finalproject/roles.html
+++ b/finalproject/roles.html
@@ -22,7 +22,7 @@
         </nav>
         <main>
         <h1>Advertising Roles & Responsibilities</h1>
-        <img src="/ist263/finalproject/media/culture.png" alt="Culture"/>
+        <img src="/ist263/finalproject/media/culture.png" alt="Culture" width="500"/>
         <a id="content"></a>
             <ul>
                 <li>Strategy</li>
