--- a/finalproject/campaign.html
+++ b/finalproject/campaign.html
@@ -22,7 +22,7 @@
         </nav>
         <main>
         <h1>The Campaing Lifecycle</h1>
-        <img src="/ist263/finalproject/media/campaign.png" alt="Campaign"/>
+        <img src="/ist263/finalproject/media/campaign.png" alt="Campaign" width="700"/>
         <a id="content"></a>
             <p>
                 <strong>
