--- a/finalproject/campaign.html
+++ b/finalproject/campaign.html
@@ -14,7 +14,7 @@
  
     <body>
         <a id="skip-to-content" href="https://elyons-su.github.io/ist263/finalproject/campaign.html#content">Skip to Content</a>
-        <nav>
+        <nav class="links">
             <a href="https://elyons-su.github.io/ist263/finalproject/home.html" target="_self">Home</a> <span> |</span>
             <a href="https://elyons-su.github.io/ist263/finalproject/advertising.html" target="_self">Advertising vs. Media</a> <span> | </span>
             <a href="https://elyons-su.github.io/ist263/finalproject/campaign.html" target="_self">The Campaign Lifecycle</a> <span> | </span> 
