--- a/finalproject/roles.html
+++ b/finalproject/roles.html
@@ -15,9 +15,9 @@
     <body>
         <a id="skip-to-content" href="https://elyons-su.github.io/ist263/finalproject/roles.html#content">Skip to Content</a>
         <nav id="links">
-            <a href="https://elyons-su.github.io/ist263/finalproject/home.html" target="_self">Home</a> <span> |</span>
-            <a href="https://elyons-su.github.io/ist263/finalproject/advertising.html" target="_self">Advertising vs. Media</a> <span> | </span>
-            <a href="https://elyons-su.github.io/ist263/finalproject/campaign.html" target="_self">The Campaign Lifecycle</a> <span> | </span> 
+            <a href="https://elyons-su.github.io/ist263/finalproject/home.html" target="_self">Home</a> 
+            <a href="https://elyons-su.github.io/ist263/finalproject/advertising.html" target="_self">Advertising vs. Media</a>
+            <a href="https://elyons-su.github.io/ist263/finalproject/campaign.html" target="_self">The Campaign Lifecycle</a> 
             <a href="https://elyons-su.github.io/ist263/finalproject/roles.html" target="_self">Advertising Roles & Responsibilities</a>
         </nav>
         <main>
